# video-trimmer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  register_events.cpp  register_events.h  register_events.hpp
src/app/: app.cpp  app.h  app.hpp
src/clock/: clock.h  duration.hpp
src/command_line/: command_line.cpp  command_line.h
src/error/: error.cpp  error.hpp
src/event_handler/: command.hpp  event_handler.cpp  event_handler.hpp  events.h  events.hpp
src/include/: auto_delete_resource.hpp  types.h
src/lib/: CMakeLists.txt
src/logger/: logger.cpp  logger.hpp
src/main_window/: commands.cpp  commands.h  commands.hpp  main_window.cpp  main_window.hpp
src/threaded_stream_reader/: video_file.cpp  video_file.hpp
src/threaded_stream_reader/adapters/codec_context/: codec_context.cpp  codec_context.hpp  ffmpeg_codec_context.cpp  ffmpeg_codec_context.hpp  mock_codec_context.cpp  mock_codec_context.hpp
src/threaded_stream_reader/adapters/format_context/: ffmpeg_format_context.cpp  ffmpeg_format_context.hpp  format_context.cpp  format_context.hpp  mock_format_context.cpp  mock_format_context.hpp
src/threaded_stream_reader/adapters/frame/: ffmpeg_frame.cpp  ffmpeg_frame.hpp  frame.cpp  frame.hpp  mock_frame.hpp
src/threaded_stream_reader/adapters/packet/: ffmpeg_packet.cpp  ffmpeg_packet.hpp  mock_packet.cpp  mock_packet.hpp  packet.cpp  packet.hpp
src/threaded_stream_reader/adapters/scaling_context/: ffmpeg_scaling_context.cpp  ffmpeg_scaling_context.hpp  mock_scaling_context.cpp  mock_scaling_context.hpp  scaling_context.cpp  scaling_context.hpp
src/threaded_stream_reader/codec_context/: codec_context.cpp  codec_context.hpp
src/threaded_stream_reader/factory/: factory.hpp  ffmpeg_factory.cpp  ffmpeg_factory.hpp  mock_factory.cpp  mock_factory.hpp
src/threaded_stream_reader/format_context/: format_context.cpp  format_context.hpp
src/threaded_stream_reader/frame/: frame.cpp  frame.hpp
src/threaded_stream_reader/packet/: packet.cpp
src/threaded_stream_reader/scaling_context/: scaling_context.cpp  scaling_context.hpp
src/threaded_stream_reader/stream_info/: stream_info.cpp  stream_info.hpp
src/threaded_stream_reader/video_content_provider/: video_content_provider.cpp  video_content_provider.hpp  video_frame_queue.cpp  video_frame_queue.hpp  video_frame_scaler.cpp  video_frame_scaler.hpp  video_reader.cpp  video_reader.hpp  work_thread.cpp  work_thread.hpp
src/threaded_stream_reader/video_frame/: texture.cpp  texture.hpp  video_frame.cpp  video_frame.hpp
src/ui/: colors.h  commands.cpp  commands.h  commands.hpp  fps_view.h  imgui_helpers.cpp  imgui_helpers.hpp  ui.cpp  ui.h  ui.hpp
src/ui/colors/: colors.hpp
src/ui/views/: fps_view.h  video_file_info_view.cpp
src/ui/widgets/: fps_view.cpp  fps_widget.cpp  fps_widget.hpp  video_file_info_view.cpp  video_file_info_view.hpp  video_file_info_widget.cpp  video_file_info_widget.hpp
src/ui/widgets/fps_widget/: fps_widget.cpp  fps_widget.hpp
src/ui/widgets/memory_usage_widget/: memory_usage_widget.cpp  memory_usage_widget.hpp
src/video/: audio_stream.cpp  audio_stream.hpp  auto_delete_ressource.hpp  error.cpp  error.hpp  stream_info.hpp  video_content_provider.cpp  video_content_provider.hpp  video_file.cpp  video_file.hpp  video_stream.cpp  video_stream.hpp
src/video/adapters/frame/: frame.cpp  (+4 more)
src/video/factory/: factory.hpp  ffmpeg_factory.cpp  ffmpeg_factory.hpp
src/video/stream_info/: stream_info.cpp
src/video/video_content_provider/: run_state.hpp  video_content_provider.cpp  video_content_provider.hpp  video_frame_scaler.cpp  video_frame_scaler.hpp  video_reader.cpp  video_reader.hpp  work_thread.hpp
src/video_player/: video_player.cpp  video_player.hpp
src/video_trimmer/: CMakeLists.txt
src/video_trimmer/app/: app.cpp  app.hpp  system_info.cpp  system_info.hpp
src/video_trimmer/clock/: clock.hpp  fmt.hpp  fmt.test.cpp  frame_duration.hpp  frame_duration.test.cpp  microsecond_duration.hpp  playback_clock.hpp  playback_clock.test.cpp  playback_position.hpp  playback_position.test.cpp  playback_time_point.hpp  playback_time_point.test.cpp  stopwatch.hpp  video_duration.hpp  video_duration.test.cpp
src/video_trimmer/command_line/: command_line.cpp  command_line.h  command_line.hpp  command_line.test.cpp
src/video_trimmer/error/: error.cpp  error.hpp
src/video_trimmer/event_handler/: event_handler.cpp  event_handler.hpp  events.hpp  register_events.cpp  register_events.hpp
src/video_trimmer/graphics/: graphics.cpp  graphics.hpp  texture.cpp  texture.hpp
src/video_trimmer/include/: auto_delete_resource.hpp  types.h  types.hpp
src/video_trimmer/logger/: logger.cpp  logger.hpp
src/video_trimmer/main_window/: commands.cpp  commands.hpp  main_window.cpp  main_window.hpp
src/video_trimmer/ui/: commands.cpp  commands.hpp  ui.cpp  ui.hpp
src/video_trimmer/video_content_provider/: video_content_provider.cpp  video_content_provider.hpp  video_reader.cpp  video_reader.hpp
src/video_trimmer/video_file/: codec_context.cpp  codec_context.hpp  frame.cpp  frame.hpp  frame.test.cpp  pixel_format.cpp  pixel_format.hpp  pixel_format.test.cpp  video_file.cpp  video_file.hpp
src/video_trimmer/video_player/: commands.cpp  commands.hpp  video_player.cpp  video_player.hpp  video_player.test.cpp
src/video_trimmer/video_reader/: video_reader.cpp  video_reader.hpp
src/video_trimmer/video_stream_reader/: video_file.cpp
src/video_view/: video_view.cpp  video_view.h
src/views/: view.cpp  view.hpp
src/views/additional_info_view/: additional_info_view.cpp  additional_info_view.hpp
src/views/files_view/: directory_scanner.cpp  directory_scanner.hpp  files_view.cpp  files_view.hpp
src/views/main_window_view/: main_window_view.cpp  main_window_view.hpp
src/views/playback_controls_view/: playback_controls_view.cpp  playback_controls_view.hpp
src/views/trim_controls_view/: trim_controls_view.cpp
src/views/video_view/: video_view.cpp  video_view.h
src/window/: commands.cpp  commands.h  window.cpp  window.h
(+109 files in other folders)
